force-app/main/default/objects/Competitor_Junction__c/Competitor_Junction__c.object-meta.xml
<CustomObject>
    <description>US 19, 20, 22, 13, 4, 41</description>
    <label>Competitor Junction</label>
    <nameField>
        <label>Competitor Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>