force-app/main/default/objects/Competitor_Junction__c/fields/Competitor_Change_in_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Change_in_Behavior__c</fullName>
    <label>Competitor Change in Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disciplined</fullName>
            </value>
            <value>
                <fullName>More Aggressive</fullName>
            </value>
            <value>
                <fullName>Out of Position</fullName>
            </value>
            <value>
                <fullName>Stepping back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>