force-app/main/default/objects/Competitor_Junction__c/fields/Competitor_Change_in_Behavior_Detail__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Change_in_Behavior_Detail__c</fullName>
    <description>US#20</description>
    <label>Competitor Change in Behavior Detail</label>
    <type>TextArea</type>
</CustomField>