force-app/main/default/objects/Competitor_Junction__c/fields/Competitor_Performance_Trend__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Performance_Trend__c</fullName>
    <label>Competitor Performance Trend</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>