force-app/main/default/objects/Competitor_Junction__c/fields/Customer_Change_in_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Customer_Change_in_Behavior__c</fullName>
    <label>Customer Change in Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decrease in Orders/Volume</fullName>
            </value>
            <value>
                <fullName>Delayed Shipment</fullName>
            </value>
            <value>
                <fullName>Extra/added Shipments</fullName>
            </value>
            <value>
                <fullName>Increase in Orders/Volume</fullName>
            </value>
            <value>
                <fullName>Moved to Inviting to Collaborate</fullName>
            </value>
            <value>
                <fullName>Moved to Loyal</fullName>
            </value>
            <value>
                <fullName>Moved to RFP/Bidding</fullName>
            </value>
            <value>
                <fullName>Moved to Transactional</fullName>
            </value>
            <value>
                <fullName>Speed up Shipments</fullName>
            </value>
            <value>
                <fullName>Other (Reason Required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>