force-app/main/default/objects/Competitor_Junction__c/fields/Reason_To_Leave_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Reason_To_Leave_Supplier__c</fullName>
    <description>US#19</description>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>