force-app/main/default/objects/Competitor_Junction__c/fields/Regional_Performance__c.field-meta.xml
<CustomField>
    <fullName>Regional_Performance__c</fullName>
    <description>US4</description>
    <label>Regional Performance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>