force-app/main/default/objects/Competitor_Junction__c/fields/Regional_Performance_Detail__c.field-meta.xml
<CustomField>
    <fullName>Regional_Performance_Detail__c</fullName>
    <description>Us4</description>
    <label>Regional Performance Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>