force-app/main/default/objects/Competitor_Junction__c/fields/Why_did_the_customer_leave_supplier__c.field-meta.xml
<CustomField>
    <fullName>Why_did_the_customer_leave_supplier__c</fullName>
    <label>Why Did the Customer Leave Supplier?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multi Source Supply</fullName>
            </value>
            <value>
                <fullName>Plant Location/Freight Advantage</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product, Product Quality</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Reputation/Credibility</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Supply Performance Problem</fullName>
            </value>
            <value>
                <fullName>Other (Reason Required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>